// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course overview LTI item test Grid item with 5 comments, completable, required 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container"
  >
    <div
      class="nti-link-to-path"
      to="#"
    >
      <div
        class="content-link related-work-ref external"
        target="_blank"
      >
        <div
          class="file-type icon fallback www"
        >
          <div
            class="external"
          />
        </div>
        <h5>
          LTI item 1
        </h5>
        <div
          class="label"
        >
          By Ref Creator
        </div>
        <div
          class="description"
        >
          this is a test LTI overview item
        </div>
        <ul
          class="nti-separated-inline-list extra-labels"
        >
          <li>
            <div
              class="lesson-overview-item-required-label"
            >
              Required
            </div>
          </li>
          <li>
            <div
              class="nti-link-to-path comment-count"
              to="#"
            >
              5 Comments
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview LTI item test Grid item with no comments, completable, not required 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container"
  >
    <div
      class="nti-link-to-path"
      to="#"
    >
      <div
        class="content-link related-work-ref external"
        target="_blank"
      >
        <div
          class="file-type icon fallback www"
        >
          <div
            class="external"
          />
        </div>
        <h5>
          LTI item 1
        </h5>
        <div
          class="label"
        >
          By Ref Creator
        </div>
        <div
          class="description"
        >
          this is a test LTI overview item
        </div>
        <ul
          class="nti-separated-inline-list extra-labels"
        >
          <li>
            <div
              class="nti-link-to-path comment-count"
              to="#"
            >
              View Comments
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview LTI item test Grid item with no comments, completable, requirement editable 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container"
  >
    <div
      class="nti-link-to-path"
      to="#"
    >
      <div
        class="content-link related-work-ref external"
        target="_blank"
      >
        <div
          class="file-type icon fallback www"
        >
          <div
            class="external"
          />
        </div>
        <h5>
          LTI item 1
        </h5>
        <div
          class="label"
        >
          By Ref Creator
        </div>
        <div
          class="description"
        >
          this is a test LTI overview item
        </div>
        <ul
          class="nti-separated-inline-list extra-labels"
        >
          <li>
            <div
              aria-haspopup="dialog"
              class="flyout-trigger require-control-value require-control flyout-closed"
              tabindex="0"
            >
              <span>
                Optional
              </span>
              <i
                class="icon-chevron-down"
              />
            </div>
          </li>
          <li>
            <div
              class="nti-link-to-path comment-count"
              to="#"
            >
              View Comments
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview LTI item test List item with 5 comments, completable, required 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="file-type icon fallback www lesson-overview-base-list-item-icon"
                >
                  <div
                    class="external"
                  />
                </div>
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                LTI item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list"
                >
                  <li>
                    <div
                      class="lesson-overview-item-required-label"
                    >
                      Required
                    </div>
                  </li>
                  <li>
                    By Ref Creator
                  </li>
                  <li>
                    <div
                      class="nti-link-to-path comment-count"
                      to="#"
                    >
                      5 Comments
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview LTI item test List item with no comments, completable, not required 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="file-type icon fallback www lesson-overview-base-list-item-icon"
                >
                  <div
                    class="external"
                  />
                </div>
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                LTI item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list"
                >
                  <li>
                    By Ref Creator
                  </li>
                  <li>
                    <div
                      class="nti-link-to-path comment-count"
                      to="#"
                    >
                      View Comments
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Course overview LTI item test List item with no comments, completable, requirement editable 1`] = `
<DocumentFragment>
  <div
    class="lesson-overview-padded-container lesson-overview-base-list-item-container"
  >
    <div
      class="lesson-overview-base-list-item-table-row"
    >
      <div
        class="lesson-overview-base-list-item-table-info-cell"
      >
        <div
          class="nti-link-to-path lesson-overview-base-list-item-link"
          to="#"
        >
          <div
            class="lesson-overview-base-list-item"
          >
            <div
              class="icon-container"
            >
              <div
                class="icon"
              >
                <div
                  class="file-type icon fallback www lesson-overview-base-list-item-icon"
                >
                  <div
                    class="external"
                  />
                </div>
              </div>
            </div>
            <div
              class="right"
            >
              <div
                class="title plain"
              >
                LTI item 1
              </div>
              <div
                class="labels"
              >
                <ul
                  class="nti-separated-inline-list"
                >
                  <li>
                    <div
                      aria-haspopup="dialog"
                      class="flyout-trigger require-control-value require-control flyout-closed"
                      tabindex="0"
                    >
                      <span>
                        Optional
                      </span>
                      <i
                        class="icon-chevron-down"
                      />
                    </div>
                  </li>
                  <li>
                    By Ref Creator
                  </li>
                  <li>
                    <div
                      class="nti-link-to-path comment-count"
                      to="#"
                    >
                      View Comments
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
